--- a/GestorTareasApp/AndroidManifest.xml
+++ b/GestorTareasApp/AndroidManifest.xml
@@ -5,8 +5,19 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="19"
-        android:targetSdkVersion="21" />
+        android:minSdkVersion="13"
+        android:targetSdkVersion="13" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -29,6 +40,22 @@
         <activity
             android:name=".RegisterActivity"
             android:label="@string/title_activity_register" >
+        </activity>
+        <activity
+            android:name=".Tareas"
+            android:label="@string/title_activity_tareas" >
+        </activity>
+        <activity
+            android:name=".NuevaTarea"
+            android:label="@string/title_activity_nueva_tarea" >
+        </activity>
+        <activity
+            android:name=".BuscarTarea"
+            android:label="@string/title_activity_buscar_tarea" >
+        </activity>
+        <activity
+            android:name=".SpinnerActivity"
+            android:label="@string/title_activity_spinner" >
         </activity>
     </application>
 
