--- a/GestorTareasApp/AndroidManifest.xml
+++ b/GestorTareasApp/AndroidManifest.xml
@@ -18,7 +18,6 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -56,6 +55,18 @@
         <activity
             android:name=".SpinnerActivity"
             android:label="@string/title_activity_spinner" >
+        </activity>
+        <activity
+            android:name=".BuscarTareaEmpleadoActivity"
+            android:label="@string/title_activity_buscar_tarea_empleado" >
+        </activity>
+        <activity
+            android:name=".DetalleActivity"
+            android:label="@string/title_activity_detalle" >
+        </activity>
+        <activity
+            android:name=".Prueba"
+            android:label="@string/title_activity_prueba" >
         </activity>
     </application>
 
